# cerber-client

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c  zipit.sh
Adrien/: CMakeLists.txt  init.txt  initGet.txt  initProg.txt  initStatus.txt  mainGet.c  mainPatch1.c  mainPatch2.c  mainPost.c
Nico/: CMakeLists.txt  DBusLib.c  DBusLib.h
include/: api_requests.h  dbus.h  error.h  errorsCode.h  locker.h  rauc-installer-generated.h  simple-json-parser.h
src/: CMakeLists.txt  DBusLib.c  Makefile  api_requests.c  cerber-config.json  dbus.c  dbus_service.c  error.c  errorsCode.c  http.c  locker.c  main.c  rauc-installer-generated.c  rauc-installer-generated.h  simple-json-parser.c
src/include/: api_requests.h  dbus.h  simple-json-parser.h
test/: CMakeLists.txt  Makefile  api_requests_test.c  dbus_test.c  main.c  main_test.c
test/include/: api_requests_test.h  locker_test.h
test/src/: CMakeLists.txt  api_requests_test.c  locker_test.c  main.c
